tests/paczka1/fuzzy1/21426408.err
Error in line 5: CQ5 S429 63,5
Error in line 15: qyJE S429 ,4,7
Error in line 2: NGHPBX9X83 A530 0,9
Error in line 20: mhNX4 S429 116,0
Error in line 28: NGHPBX9X83 S975 16,2
Error in line 32: IawnigpyEOK A5;0 16,5
